--- a/src/sample/stuList.fxml
+++ b/src/sample/stuList.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.chart.PieChart?>
+<?import com.jfoenix.controls.JFXTextArea?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -15,7 +17,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="770.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.stuListController">
    <children>
       <BorderPane layoutX="-26.0" layoutY="-53.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -134,9 +135,9 @@
                         <Font size="14.0" />
                      </font>
                   </JFXButton>
-                  <ImageView fx:id="printPreview" fitHeight="25.0" fitWidth="25.0" layoutX="332.0" layoutY="333.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="320.0">
+                  <ImageView fx:id="downloadStudent" fitHeight="25.0" fitWidth="25.0" layoutX="332.0" layoutY="333.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="325.0">
                      <image>
-                        <Image url="@images/printer.png" />
+                        <Image url="@images/download.png" />
                      </image>
                   </ImageView>
                   <Text layoutX="28.0" layoutY="93.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student List" AnchorPane.leftAnchor="460.0" AnchorPane.topAnchor="320.0">
@@ -144,25 +145,6 @@
                         <Font size="18.0" />
                      </font>
                   </Text>
-                  <VBox layoutX="26.0" layoutY="423.0" prefHeight="250.0" prefWidth="420.0" AnchorPane.leftAnchor="460.0" AnchorPane.topAnchor="60.0">
-                     <children>
-                        <HBox prefHeight="30.0" prefWidth="200.0">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Total Students: ">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Text>
-                              <Text fx:id="totalStudents" strokeType="OUTSIDE" strokeWidth="0.0">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Text>
-                           </children>
-                        </HBox>
-                        <PieChart fx:id="pieChart" title="Students Year" />
-                     </children>
-                  </VBox>
                   <TableView fx:id="studentList" layoutX="505.0" layoutY="140.0" prefHeight="210.0" prefWidth="420.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="460.0">
                     <columns>
                       <TableColumn fx:id="name" prefWidth="280.0" text="Name" />
@@ -190,6 +172,78 @@
                   </Text>
                   <ListView fx:id="teachingCourse" layoutX="10.0" layoutY="10.0" prefHeight="150.0" prefWidth="440.0" style="-fx-fixed-cell-size: 30;" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="10.0" />
                   <JFXButton fx:id="removeCourseButton" layoutX="38.0" layoutY="354.0" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Remove Course" textFill="WHITE" AnchorPane.bottomAnchor="60.0" AnchorPane.rightAnchor="450.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </JFXButton>
+                  <Text layoutX="20.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course Details" AnchorPane.leftAnchor="460.0" AnchorPane.topAnchor="60.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+                  <ScrollPane hbarPolicy="NEVER" layoutX="460.0" layoutY="90.0" prefHeight="170.0" prefWidth="420.0" AnchorPane.leftAnchor="460.0" AnchorPane.topAnchor="100.0">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="420.0">
+                           <children>
+                              <VBox prefWidth="400.0">
+                                 <children>
+                                    <Text fx:id="courseTitle" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="380.0">
+                                       <VBox.margin>
+                                          <Insets left="10.0" top="10.0" />
+                                       </VBox.margin>
+                                       <font>
+                                          <Font name="System Bold" size="14.0" />
+                                       </font>
+                                    </Text>
+                                    <Text layoutX="20.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time:" wrappingWidth="380.0">
+                                       <font>
+                                          <Font name="System Bold" size="14.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets left="10.0" top="10.0" />
+                                       </VBox.margin>
+                                    </Text>
+                                    <JFXTextArea fx:id="time" editable="false" focusColor="#eb723100" prefHeight="50.0" unFocusColor="#eb7a3400" wrapText="true">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets left="10.0" right="10.0" />
+                                       </VBox.margin>
+                                    </JFXTextArea>
+                                    <Text layoutX="20.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description:" wrappingWidth="380.0">
+                                       <font>
+                                          <Font name="System Bold" size="14.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets left="10.0" top="10.0" />
+                                       </VBox.margin>
+                                    </Text>
+                                    <JFXTextArea fx:id="desc" editable="false" focusColor="#eb7a3800" layoutX="20.0" layoutY="69.0" prefHeight="80.0" unFocusColor="#eb783100" wrapText="true">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets left="10.0" right="10.0" />
+                                       </VBox.margin>
+                                    </JFXTextArea>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </ScrollPane>
+                  <ImageView fx:id="downloadTeaching" fitHeight="25.0" fitWidth="25.0" layoutX="864.0" layoutY="330.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;" AnchorPane.leftAnchor="425.0" AnchorPane.topAnchor="390.0">
+                     <image>
+                        <Image url="@images/download.png" />
+                     </image>
+                  </ImageView>
+                  <JFXButton fx:id="editCourseButton" layoutX="368.0" layoutY="355.0" onAction="#EditCourse" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Edit Course" textFill="WHITE" AnchorPane.rightAnchor="75.0" AnchorPane.topAnchor="280.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXButton fx:id="saveCourseDetailsButton" layoutX="378.0" layoutY="365.0" onAction="#SaveCourse" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Save" textFill="WHITE" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="280.0">
                      <font>
                         <Font size="14.0" />
                      </font>
