--- a/src/sample/directory.fxml
+++ b/src/sample/directory.fxml
@@ -12,7 +12,7 @@
       <Button fx:id="button" layoutX="253.0" layoutY="128.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="30.0" prefWidth="101.0" text="Browse" />
       <TextField fx:id="textfield" layoutX="24.0" layoutY="131.0" />
       <Label fx:id="label" layoutX="24.0" layoutY="81.0" prefHeight="15.0" prefWidth="318.0" text="Choose directory to store your course list PDF FIle." />
-      <Text fx:id="pdfMessage" fill="#62ff00" layoutX="-1.0" layoutY="211.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="430.0">
+      <Text fx:id="pdfMessage" fill="#eb7e31" layoutX="-1.0" layoutY="211.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="430.0">
          <font>
             <Font size="23.0" />
          </font>
