--- a/src/sample/signUp.fxml
+++ b/src/sample/signUp.fxml
@@ -3,10 +3,12 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXCheckBox?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -80,11 +82,6 @@
                   <Image url="@images/padlock.png" />
                </image>
             </ImageView>
-            <JFXButton layoutX="242.5" layoutY="600.0" onMouseClicked="#signUp" prefHeight="43.0" prefWidth="135.0" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Sign up" textFill="WHITE">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </JFXButton>
             <JFXButton layoutX="312.0" layoutY="125.0" prefHeight="51.0" prefWidth="225.0" style="-fx-background-color: linear-gradient(to right top, #3c047c, #8e0070, #c2005b, #e04644, #eb7e31);" text="Sign Up" textFill="WHITE">
                <font>
                   <Font size="24.0" />
@@ -123,12 +120,12 @@
                   <Font size="24.0" />
                </font>
             </JFXButton>
-            <Text fx:id="signUpMessage" fill="#eb7e31" layoutX="75.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="462.0">
+            <Text fx:id="signUpMessage" fill="RED" layoutX="75.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="442.0" AnchorPane.leftAnchor="85.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Text>
-            <JFXCheckBox fx:id="showPassword" checkedColor="#eb7e31" layoutX="350.0" layoutY="470.0" onAction="#TriggerPasswordCheckBox" style="-fx-cursor: hand;" text="Show Password">
+            <JFXCheckBox fx:id="showPassword" checkedColor="#eb7e31" layoutX="350.0" layoutY="475.0" onAction="#TriggerPasswordCheckBox" style="-fx-cursor: hand;" text="Show Password">
                <font>
                   <Font size="18.0" />
                </font>
@@ -137,22 +134,42 @@
                <font>
                   <Font size="18.0" />
                </font>
+               <tooltip>
+                  <Tooltip text="Minimum 6 characters" />
+               </tooltip>
             </TextField>
             <TextField fx:id="reTextPassword" disable="true" layoutX="150.0" layoutY="400.0" prefHeight="26.0" prefWidth="350.0" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to right top, #3c047c, #8e0070, #c2005b, #e04644, #eb7e31); -fx-border-width: 0px 0px 2px 0px;" visible="false">
                <font>
                   <Font size="18.0" />
                </font>
+               <tooltip>
+                  <Tooltip text="Minimum 6 characters" />
+               </tooltip>
             </TextField>
             <PasswordField fx:id="password" layoutX="150.0" layoutY="330.0" prefHeight="26.0" prefWidth="350.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to right top, #3c047c, #8e0070, #c2005b, #e04644, #eb7e31); -fx-border-width: 0px 0px 2px 0px;">
                <font>
                   <Font size="18.0" />
                </font>
+               <tooltip>
+                  <Tooltip text="Minimum 6 characters" />
+               </tooltip>
             </PasswordField>
             <PasswordField fx:id="rePassword" layoutX="150.0" layoutY="400.0" prefHeight="26.0" prefWidth="350.0" promptText="Retype Password" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to right top, #3c047c, #8e0070, #c2005b, #e04644, #eb7e31); -fx-border-width: 0px 0px 2px 0px;">
                <font>
                   <Font size="18.0" />
                </font>
+               <tooltip>
+                  <Tooltip text="Minimum 6 characters" />
+               </tooltip>
             </PasswordField>
+            <Label layoutX="426.0" layoutY="308.0" text="* Required" textFill="RED" AnchorPane.leftAnchor="445.0" AnchorPane.topAnchor="308.0" />
+            <Label layoutX="455.0" layoutY="318.0" text="* Required" textFill="RED" AnchorPane.leftAnchor="445.0" AnchorPane.topAnchor="378.0" />
+            <Label layoutX="455.0" layoutY="318.0" text="* Required" textFill="RED" AnchorPane.leftAnchor="445.0" AnchorPane.topAnchor="448.0" />
+            <JFXButton layoutX="242.5" layoutY="600.0" onMouseClicked="#signUp" prefHeight="43.0" prefWidth="135.0" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Sign up" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXButton>
          </children>
       </AnchorPane>
    </right>
