--- a/src/sample/stuList.fxml
+++ b/src/sample/stuList.fxml
@@ -241,12 +241,12 @@
                         <Image url="@images/download.png" />
                      </image>
                   </ImageView>
-                  <JFXButton fx:id="editCourseButton" layoutX="368.0" layoutY="355.0" onAction="#EditCourse" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Edit Course" textFill="WHITE" AnchorPane.rightAnchor="75.0" AnchorPane.topAnchor="280.0">
+                  <JFXButton fx:id="editCourseButton" layoutX="368.0" layoutY="355.0" onMouseClicked="#EditCourse" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Edit Course" textFill="WHITE" AnchorPane.rightAnchor="75.0" AnchorPane.topAnchor="280.0">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton fx:id="saveCourseDetailsButton" layoutX="378.0" layoutY="365.0" onAction="#SaveCourse" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Save" textFill="WHITE" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="280.0">
+                  <JFXButton fx:id="saveCourseDetailsButton" layoutX="378.0" layoutY="365.0" onMouseClicked="#SaveCourse" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Save" textFill="WHITE" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="280.0">
                      <font>
                         <Font size="14.0" />
                      </font>
