set an error message when the lecturer input NRIC number that less than 12 digits

--- a/src/sample/lecDash.fxml
+++ b/src/sample/lecDash.fxml
@@ -209,6 +209,11 @@
                         <Font size="18.0" />
                      </font>
                   </JFXButton>
+                  <Text fx:id="errorMessage" fill="#fa0000" layoutX="318.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="220.800048828125">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Text>
                </children>
             </AnchorPane>
          </center>
