--- a/src/sample/lecDash.fxml
+++ b/src/sample/lecDash.fxml
@@ -214,6 +214,11 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Text>
+                  <JFXButton fx:id="contactButton" layoutX="690.0" layoutY="448.0" onAction="#CallUs" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #EB7B31; -fx-cursor: hand;" text="Contact Us" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </JFXButton>
                </children>
             </AnchorPane>
          </center>
