--- a/src/sample/lecDash.fxml
+++ b/src/sample/lecDash.fxml
@@ -181,7 +181,7 @@
                                     <Font size="18.0" />
                                  </font>
                               </TextField>
-                              <TextField fx:id="nric" disable="true" editable="false" layoutX="10.0" layoutY="327.0" onKeyTyped="#validateNRIC" promptText="Identity Card No" style="-fx-text-fill: Black;">
+                              <TextField fx:id="nric" disable="true" editable="false" layoutX="10.0" layoutY="327.0" promptText="Identity Card No" style="-fx-text-fill: Black;">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
